Add separation into chromosome to speed up and exploit parallel computation

--- a/.test/config_public-data3_hg38.yaml
+++ b/.test/config_public-data3_hg38.yaml
@@ -37,6 +37,8 @@ prs_algorithms:
   lassosum2:
     activate: true
   prscs:
-    activate: true
+    activate: false
   sct:
-    activate: true
+    activate: false
+  sbayesr:
+    activate: false
